--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
 @import "tailwindcss";
-
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
@@ -8,10 +7,10 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans:
-    "var(--font-sans)", "ui-sans-serif", "-apple-system", "BlinkMacSystemFont",
-    "Segoe UI Variable Display", "Segoe UI", "Helvetica", "Apple Color Emoji",
-    "Arial", "sans-serif", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
+    "var(--font-sans)", "ui-sans-serif", "-apple-system",
+    "BlinkMacSystemFont", "Segoe UI Variable Display", "Segoe UI", "Helvetica",
+    "Apple Color Emoji", "Arial", "sans-serif", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
   --font-mono:
     "var(--font-mono)", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
